# cmake-playground

./: .gitignore  README.md
.github/workflows/: affine.yml  barnsley_fern.yml  cxxwrap1.yml  cxxwrap2.yml  cxxwrap3.yml  cxxwrap4.yml  cxxwrap6.yml  hello.yml  omikuji.yml
affine/: CMakeLists.txt  Makefile  Manifest.toml  Project.toml  README.md  debug.jl
affine/src/: MyCxxWrap5.jl
affine/test/: CMakeLists.txt  runtests.jl  test_affine.cpp
barnsley_fern/: .gitignore  CMakeLists.txt  Config.cmake.in  Project.toml  README.md  build.sh  main.cpp  main.jl  vis.jl
barnsley_fern/src/: CMakeLists.txt  MyCxxWrap4.jl  affine.cpp  affine.hpp  fern.cpp  fern.hpp  jl_affine.cpp  jl_fern.cpp
barnsley_fern/test/: runtests.jl
cxxwrap1/: Dockerfile  Manifest.toml  Project.toml  README.md  build.sh  callcxx.jl  hello.cpp
cxxwrap2/: CMakeLists.txt  README.md  build.sh  callcxx.jl
cxxwrap3/: .gitignore  CMakeLists.txt  Dockerfile  Manifest.toml  Project.toml  README.md  build.sh
cxxwrap3/src/: CMakeLists.txt  CxxWrap3.jl  MyCxxWrap3.jl
cxxwrap3/test/: runtests.jl
cxxwrap4/: Dockerfile  Project.toml
cxxwrap4/src/: MyCxxWrap4.jl
cxxwrap4/test/: runtests.jl
cxxwrap6/: Manifest.toml  Project.toml  README.md
cxxwrap6/src/: MyCxxWrap6.jl
cxxwrap6/test/: runtests.jl
hello/: CMakeLists.txt  README.md
hello/test/: CMakeLists.txt  Manifest.toml  runtests.jl  test1.cpp  test2.cpp
omikuji/: CMakeLists.txt  Config.cmake.in  build.sh
omikuji/app/: CMakeLists.txt  build.sh  main.cpp
omikuji/src/: CMakeLists.txt  drawing.cpp  drawing.hpp
